@@ -34,7 +34,7 @@ require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_publicObject.php')
  *
  * @author		Oliver Klee <typo3-coding@oliverklee.de>
  */
-class tx_oelib_testingObject extends tx_oelib_publicObject {
+final class tx_oelib_testingObject extends tx_oelib_publicObject {
 	/**
 	 * @var	array	the data for this object
 	 */
